k8s/apps/order-service/manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app.kubernetes.io/name: order-service
    app.kubernetes.io/part-of: ecommerce-app
spec:
  replicas: 2 # اجرای 2 پاد برای High Availability
  selector:
    matchLabels:
      app.kubernetes.io/name: order-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: order-service
    spec:
      containers:
        - name: order-service
          image: local.registry/order-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-svc
  labels:
    app.kubernetes.io/name: order-service
    app.kubernetes.io/part-of: ecommerce-app
spec:
  selector:
    app.kubernetes.io/name: order-service
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
