k8s/apps/order-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-api-gateway
  namespace: ecommerce
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: api.redweb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-service-svc
                port:
                  number: 80
