k8s/apps/order-service/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: order-route
  namespace: ecommerce
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "api.redweb.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/orders
      backendRefs:
        - name: order-service-svc
          port: 80
